main.css
/*Landing Page and Overarching CSS*/
#home {
    background: url('desk_background.jpeg') no-repeat center center fixed; 
    max-width: 100%;
    width: 100%;
    height: 100vh;
    min-height:100vh;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: contain cover;
    font-family: 'Montserrat';
  }

.nav-item{
    text-align: right;
}

#box{
  color: white;
  background-color: black;
  opacity: 0.8;
  line-height: 200%;
}

#lm2{
  padding-left:10%;
  padding-right:10%
}

#jumboP{
  padding-left:3%;
  padding-right:3%;
}

#title{
  border-bottom: solid 2px;
  border-top: solid 2px;
  margin-right: 6%;
  margin-left: 6%;
  padding-top: 4%;
  padding-bottom: 4%;
}

h1
{
  color: white;
}

/*About Us and Team Section*/

#team{
  font-family: 'Montserrat';
}
  
.team-member {
    text-align: center;
  }
.team-member img {
    width: 14rem;
    height: 14rem;
    border: 0.5rem solid rgba(0, 0, 0, 0.1);
  }
.team-member h4 {
    margin-top: 1.5rem;
    margin-bottom: 0;
  }

#team-div{
    margin-bottom:2%;
  }

#team{
  background-color: #F8F9F9;
}

.person{
  padding-bottom: 4.25%;
}

#team{
  font-family: 'Montserrat';
  max-width: 100%;
  width: 100%;
  /*
  height: 95vh;
  min-height: 95vh;
  */
}
#team-title{
  padding-top: 3%;
}

#team-description{
  padding-top:5%;
}

#team-carousel{
  padding-top:4%;
}

/*Courses*/
#courses-title{
  color:#212529;
  padding-top:2%;
}

#courses{
  font-family: 'Montserrat';
  background-color: #F8F9F9;
}

a.custom-card,
a.custom-card:hover {
  color: inherit;
  text-decoration: none;
}

/*Channel*/
#channel-title{
  padding-top:3%;
}

.playlist-title{
  padding-top: 1.5%;
}

.channel-description{
  padding-bottom:1.5%;
}

#channel{
  font-family: 'Montserrat';
  background-color: #F8F9F9;
}
#channel-message{
  padding-top: 3%;
}
.channel-row{
  margin-top:3%;
}

#final-row{
  margin-bottom:3%;
}

/*Contact*/
#contact-title{
  padding-top:3%;
}

#contact-form{
  /*background: url(bg2.jpg); 
  background: lightslategray; */
  background: #8859a9;
  font-family: 'Montserrat';
  max-width: 100%;
  width: 100%;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: contain cover;
}
#contact-title{
  color: #212429 !important;
}
#contact-title-2{
  padding-top: 3%;
}

#contact{
  font-family: 'Montserrat';
  max-width: 100%;
  width: 100%;
  color: black;
  /*
  min-height:75vh;
  */
}

#contact-message{
  padding-top:3%;
}

#contact-title{
  padding-bottom: 4%;
}

section#contact {
  background-color: #F8F9F9;
/*  background-image: url("../assets/img/map-image.png"); */
  background-repeat: no-repeat;
  background-position: center;
}
section#contact .section-heading {
  color: #212529;
}
section#contact form#contactForm .form-group {
  margin-bottom: 1.5rem;
}
section#contact form#contactForm .form-group input,
section#contact form#contactForm .form-group textarea {
  padding: 1.25rem;
}
section#contact form#contactForm .form-group input.form-control {
  height: auto;
}
section#contact form#contactForm .form-group-textarea {
  height: 100%;
}
section#contact form#contactForm .form-group-textarea textarea {
  height: 100%;
  min-height: 10rem;
}
section#contact form#contactForm p.help-block {
  margin: 0;
}
section#contact form#contactForm .form-control:focus {
  border-color: #212429;
  box-shadow: none;
}
section#contact form#contactForm ::-webkit-input-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}
section#contact form#contactForm :-moz-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}
section#contact form#contactForm ::-moz-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}
section#contact form#contactForm :-ms-input-placeholder {
  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-weight: 700;
  color: #ced4da;
}

/*Footer*/
footer{
  color: white;
  background-color: #263139;
}

.icon-button{
  color: white;
}

#fb:hover{
  color:#4267B2;
}
#git:hover{
  color: black;
}
#link:hover{
  color: #0077B5;
}

#twitter:hover{
  color: #55acee;
}

#reddit:hover{
  color: #FF4301;
}

#signal:hover{
color:#3a76f0;
}

#telegram:hover{
  color:#0088CC;
}
#youtube:hover{
  color: #FF0000;
}
#udemy:hover{
  color: #ec5252
}
#mail:hover{
  /*color:#D44638;*/
  color: #55acee;
}
#bottom-footer{
  background-color:#1f282e;
  font-family: 'Montserrat';
}

#insta:hover{
  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
  -webkit-background-clip: text;
          /* Also define standard property for compatibility */
          background-clip: text;
  -webkit-text-fill-color: transparent; 
}

/*Extraneous*/

/* Three columns side by side */
.column {
  float: left;
  width: 33.3%;
  margin-bottom: 16px;
  padding: 0 8px;
}

/* Display the columns below each other instead of side by side on small screens */
@media screen and (max-width: 650px) {
  .column {
    width: 100%;
    display: block;
  }
}

/* Add some shadows to create a card effect */
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
}

/* Some left and right padding inside the container */
.container {
  padding: 0 16px;
}

/* Clear floats */
.container::after, .row::after {
  content: "";
  clear: both;
  display: table;
}

.title {
  color: grey;
}

.button {
  border: none;
  outline: 0;
  display: inline-block;
  padding: 8px;
  color: white;
  background-color: #000;
  text-align: center;
  cursor: pointer;
  width: 100%;
}
.button:hover {
  background-color: #555;
}

